--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "name": "Trans.eu",
     "url": "https://github.com/trans-eu"
   },
+  "jestWebpackResolver": {
+    "silent": true,
+    "webpackConfig": "./webpack.config.js"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/trans-eu/Avatar/issues"
@@ -43,10 +47,17 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.12",
+    "babel-jest": "^29.2.1",
     "babel-loader": "^8.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.0",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.0",
+    "jest-webpack-resolver": "^0.3.0",
+    "jsdom": "^20.0.1",
     "postcss": "^8.4.18",
     "postcss-css-variables": "^0.18.0",
     "postcss-loader": "^7.0.1",
@@ -56,10 +67,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
-    }
   }
 }
